--- a/ticTacToe/index.html
+++ b/ticTacToe/index.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tic taco toe</title>
+    <title>Tic-Tac-Toe</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="app.js"></script>
 </head>
+
 <body>
-    <div>I can flicker goon for 5 seconds! *skull emoji</div>
+    <div id="game">
+        <h1>Tic-Tac-Toe</h1>
+        <div id="board">
+            <!-- 9 cells for the board -->
+            <div class="cell" data-index="0"></div>
+            <div class="cell" data-index="1"></div>
+            <div class="cell" data-index="2"></div>
+            <div class="cell" data-index="3"></div>
+            <div class="cell" data-index="4"></div>
+            <div class="cell" data-index="5"></div>
+            <div class="cell" data-index="6"></div>
+            <div class="cell" data-index="7"></div>
+            <div class="cell" data-index="8"></div>
+        </div>
+        <button id="restart">Restart</button>
+        <p id="message"></p>
+    </div>
+    <script src="app.js"></script>
 </body>
+
 </html>
